services/authentication/manifests/authentication.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-deployment-v1
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: authentication
      version: v1
  template:
    metadata:
      labels:
        app: authentication
        version: v1
    spec:
      containers:
        - name: authentication
          image: authentication
          resources:
            requests:
              memory: "80Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "150m"
          ports:
            - containerPort: 9080
          livenessProbe:
            httpGet:
              path: /.well-known/apollo/server-health/
              port: 9080
            initialDelaySeconds: 3
            periodSeconds: 3
