services/authentication/manifests/authentication.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication
  labels:
    app: authentication
spec:
  ports:
    - targetPort: 9081
      name: http
      protocol: TCP
      port: 80
  selector:
    app: authentication
