services/authentication/manifests/authentication.destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authentication
spec:
  host: authentication
  subsets:
    - name: v1
      labels:
        version: v1
