services/authentication/manifests/authentication.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authentication
spec:
  hosts:
    - authentication.svc.cluster.local
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: authentication
            port:
              number: 80
